# freeLLM

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.github/workflows/: deploy_firewall_rules.yml
ansible/: firewall_config.yaml  install_docker.yaml
ansible/inventory/: hosts.ini
ansible/playbooks/: harden_firewall.yml  install_docker.yml
ansible/roles/docker_install/defaults/: main.yml
ansible/roles/docker_install/tasks/: main.yml
ansible/roles/firewall/defaults/: main.yml
ansible/roles/firewall/tasks/: main.yml
app/: auth.py  main.py  settings.py
app/adapters/: base.py  ollama.py  vllm.py
app/middleware/: forwarded_ip.py  logging.py  request_id.py
app/ratelimit/: base.py  memory.py  redis_store.py
app/schemas/: openai_chat.py  openai_common.py  openai_completions.py  openai_embeddings.py
app/utils/: sse.py  time.py
nginx/: nginx.conf
tests/: conftest.py  test_auth.py  test_chat_compat.py  test_rate_limit.py
